# ai-action-authorization-test-harness

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY_MODEL.md  THREAT_MODEL.md  pyproject.toml
examples/matrices/: 01_financial_commitment.yaml  02_send_external_email.yaml  03_deploy_to_production.yaml  04_export_customer_data.yaml  05_restart_server.yaml  06_issue_refund.yaml  07_modify_user_permissions.yaml  08_delete_database_record.yaml  09_share_internal_document.yaml  10_mass_marketing_email.yaml  11_access_employee_records.yaml  12_change_billing_configuration.yaml  13_schedule_social_post.yaml  14_general_information.yaml
src/: cli.py  report.py
src/ai_action_authorization_test_harness.egg-info/: PKG-INFO  SOURCES.txt
src/harness/: audit.py  gate.py  loader.py  report.py  runner.py
